--- a/src/App.css
+++ b/src/App.css
@@ -12,17 +12,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+p {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
 .section1 {
   display: flex;
   flex-direction: column;
   background-image: url("res/background/background.gif");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 25%;
+  height: 50%;
 }
 
 .logo_section1 {
-  flex: 4;
+  flex: 6;
   display: flex;
   margin: 0 auto;
   width: 60%;
@@ -106,9 +110,46 @@ body {
   flex: 1;
 }
 
-img {
-  border-radius: 50px;
+.image {
+  border-radius: 100%;
   width: 100%;
+}
+
+.section3 {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  text-align: center;
+  width: 100%;
+  height: 50%;
+}
+
+.modelCanvas {
+  background-image: url("res/background/background.gif");
+  border-radius: 50px;
+  height: 100%;
+}
+
+.model {
+  color: #ffffff;
+}
+
+.canvasContainer {
+  align-self: center;
+
+  flex: 1;
+  width: 50%;
+  height: 100%;
+  border-radius: 50px;
+  border: 3px solid palevioletred;
+}
+
+.mouseIcon {
+  vertical-align: text-bottom;
+}
+
+.section3 span {
+  margin: 3ch;
 }
 
 code {
